@@ -68,6 +68,6 @@ public class GreaterThanOrEqualToConstraint implements AtomicConstraint {
 
     @Override
     public String toString() {
-        return String.format("`%s` >= %s", field.getName(), referenceValue);
+        return "`%s` >= %s".formatted(field.getName(), referenceValue);
     }
 }
