@@ -49,8 +49,8 @@ public class InMapConstraintValidator extends ConstraintValidator<InMapConstrain
             return ValidationResult.failure("Field must be specified" + getErrorInfo(dto));
         }
         Optional<FieldDTO> field = fields.stream().filter(f -> f.name.equals(dto.field)).findFirst();
-        if (!field.isPresent()) {
-            return ValidationResult.failure(String.format("%s must be defined in fields%s", ValidationResult.quote(dto.field), getErrorInfo(dto)));
+        if (field.isEmpty()) {
+            return ValidationResult.failure("%s must be defined in fields%s".formatted(ValidationResult.quote(dto.field), getErrorInfo(dto)));
         }
         return ValidationResult.success();
     }
